fix(base): add base style to collapse table border
With the update of normalize a table border-collapse style was removed. This was picked up by
backstop. Base style added and verified with backstop

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -98,3 +98,7 @@ meter::-webkit-meter-optimum-value {
     background-image: none;
     background-color: $cursive;
 }
+
+table {
+    border-collapse: collapse;
+}
